styles.css
/* # Front-end Style Guide

## Layout

The designs were created to the following widths:

- Mobile: 375px
- Desktop: 1440px

## Colors

### Neutral

- Almost White: hsl(0, 0%, 98%)
- Medium Gray: hsl(0, 0%, 41%)
- Almost Black: hsl(0, 0%, 8%)

## Typography

### Body Copy

- Font size (paragraph): 18px

### Font

- Family: [Epilogue](https://fonts.google.com/specimen/Epilogue)
- Weights: 500, 700 */

.attribution { font-size: 11px; text-align: center; }
.attribution a { color: hsl(228, 45%, 44%); }

:root {
    --almostWhite: hsl(0, 0%, 98%);
    --gray: hsl(0, 0%, 41%);
    --black:  hsl(0, 0%, 8%)
}
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    /* min-width: 375px; */
    min-height: 100dvh;
    width: 100%;  
    background-color: red; 
}
body {
    min-height: 100vh;
    background-color: var(--almostWhite);
    font-family: 'Epilogue', sans-serif;
}


.navbar {
   
    padding: 1.5rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.navLeft {
    min-width: 35.5rem;
}
.navRight {
    width: 300px;
    padding: 1rem;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.nav-items { 
    list-style-type: none;
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-left: 10px;
    padding: 10px;
    color: var(--gray);
}

.nav-item {
    margin-left: 2rem;

}

.loginBtn {
    color: var(--gray);
}
.loginBtn:hover {
    color: var(--black);
}

a {
    text-decoration: none;
}
a:link {
    color: var(--gray);
}
a:visited {
    color: var(--gray);
}
a:hover {
 color: var(--black);   
}

.registerBtn {
    font-size: 1rem;
    width: 6.2rem;
    padding: 9px;
    color: var(--gray);
    border-radius: 14px;
    border: 2px solid var(--gray);
    background-color: var(--almostWhite);
}
.registerBtn:hover {
    border: 2px solid var(--black);
    color: var(--black);
    cursor: pointer;
}

section {
    padding: 3rem;
    display: flex;
    justify-content: space-evenly;
}

.innerLeftCont { 
    min-width: 47%;
    margin: 0rem 1rem;
    padding: 1.7rem;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}
.innerRightCont {
    padding: 1.5rem;
}

.desktopHero {
    
    width: 80%;
    height: auto;
   
}

#main-text {
    font-size: 5.2rem;
    padding: 10px 5px 0px;
}
.aboutText {
    padding: 10px 5px 0px;
    font-size: 18px;
    line-height: 28px;;
    color: var(--gray);
}

.learnMoreBtn {
    font-size: 18px;
    border: none;
    padding: 1rem 2rem;
    color: white;
    background-color: var(--black);
    border-radius: 15px;
}
.learnMoreBtn:hover {
    cursor: pointer;
    background-color: transparent;
    color: var(--black);
    border: 1.5px solid var(--black);
}

.testimonialCont {
    padding: 2rem 0rem;
    display: flex;
    justify-content: space-between;
}
.flex-align {
    display: flex;
    align-items: center;
    
}

.dropdownFeatures {
    background-color: white;
    box-shadow: 0px 10px 20px 1px rgba(0,0,0,.15);
    font-size: 15px;
    padding: .580rem .5rem .5rem;
    text-align: center;
    position: absolute;
    top: 75px;
    left: 110px;
    width: 150px;
    height: 165px;
    border-radius: 10px;
    z-index: 1;
    display: none;
}

.ul-features, .ul-company {
    list-style-type: none;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}
.ul-features li {
    padding: .5rem;
}
.ul-company li {
    padding: 8px 0px;
    margin-left: 5px;
}

.dropdownCompany {
    background-color: white;
    box-shadow: 0px 10px 20px 1px rgba(0,0,0,.15);
    font-size: 15px;
    padding: 1rem;
    position: absolute;
    top: 75px;
    left: 300px;
    width: 110px;
    height: 120px;
    border-radius: 10px;
    z-index: 1;
    display: none;
}

.dropdownIcon {
    margin-right: 5px;
}

.hamburgerMenu {
    display: none;
}

.closeNavX:hover  {
    cursor: pointer;
}


@media only screen and (max-width: 830px) {
    #main-text {
        font-size: 3rem;
        text-align: center;
    }
    .innerRightCont {
        order: -1;
        text-align: center;
    }
    .innerLeftCont { align-items: center; }
    section{
        flex-direction: column;
        justify-content: center;
       
    }
    .aboutTextCont {
        margin: 1rem;
        width: 15rem;
        text-align: center;
    }
    .testimonialCont {
        flex-wrap: nowrap;
        min-width: 20rem;
        
    }
    .testimonials { margin: .275rem; }

    .nav-item { display: none; }
    
    .loginBtn, .registerBtn { display: none; }
    .navbar { padding: 1rem;  }

    .nav-logo { width: 130px;; }
    .hamburgerMenu { display: block; }
    .navLeft {
        max-width: 400px;
        min-width: 50px;
    }
    .navRight { width: 50px; }
    

}
@media only screen and (max-width: 500px) {
    .innerRightCont, .innerLeftCont {
        padding: 0.5rem;
    }
    
    .desktopHero { width: 100%; }
    section.container {
        padding: 1rem;
    }
    #main-text {
        font-size: 2.4rem;
    }
    #br {
        display: none;
    }
}

.mobileNav {
    background-color: rgba(18, 17, 17, 0.7); 
    position: fixed;
    z-index: 1; 
    left: 0;
    top: 0; 
    width: 100%; 
    height: 100%; 
    overflow: auto;
    transition: ease-in .3s;
    display: none;
}
.mobileNavContent {
    position: fixed;
    z-index: 2;
    top: 0;
    right: 0;
    width: 50%;
    height: 100%;
    background-color: var(--almostWhite);
    /* display: none; */
}
.imgDiv {
   
    padding: 1.5rem;
    text-align: right;

}

